--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@tsconfig/recommended": "^1.0.1",
     "primevue": "3.17.0",
     "decimal.js": "^10.4.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "@types/lodash": "4.14.182",
+    "@metamask/jazzicon": "2.0.0",
+    "vue-router": "^4.1.6"
   }
 }
