--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.40",
     "@pontem/aptos-wallet-adapter": "^0.6.4",
     "@pontem/liquidswap-sdk": "^0.5.2",
+    "@pontem/coins-registry": "^1.0.4",
     "pinia": "2.0.22",
     "@vueuse/core": "^8.9.4",
     "@tsconfig/recommended": "^1.0.1",
