feat(widget): APT-986 fix logos

--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@vueuse/core": "^8.9.4",
     "decimal.js": "^10.4.1",
     "lodash": "^4.17.21",
+    "node-sass": "^8.0.0",
     "pinia": "2.0.22",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primevue": "3.17.0",
     "sass": "^1.57.1",
-    "sass-loader": "13.0.0",
+    "sass-loader": "^13.2.0",
     "tslib": "^2.3.0",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-require-transform": "^1.0.4",
