feat(widget): APT-986 fix scss scope

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@originjs/vite-plugin-require-context": "^1.0.9",
     "@vue/compiler-sfc": "3.2.45",
+    "sass": "^1.57.1",
     "vite": "^2.4.4"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@types/lodash": "4.14.182",
     "@vitejs/plugin-vue": "^1.9.1",
     "@vueuse/core": "^8.9.4",
+    "css-loader": "^6.7.3",
     "decimal.js": "^10.4.1",
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
@@ -31,11 +33,11 @@
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primevue": "3.17.0",
-    "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "tslib": "^2.3.0",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-require-transform": "^1.0.4",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "vue": "^3.2.40"
   }
 }
