--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@originjs/vite-plugin-require-context": "^1.0.9",
-    "@vue/compiler-sfc": "3.2.45",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "vite-plugin-require-transform": "^1.0.4",
     "sass": "^1.57.1",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "@tsconfig/recommended": "^1.0.1"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -20,24 +22,19 @@
     "@metamask/jazzicon": "2.0.0",
     "@pontem/aptos-wallet-adapter": "^0.6.8",
     "@pontem/coins-registry": "^1.0.4",
-    "@pontem/liquidswap-sdk": "file:/Users/dmitrijkuksenko/pontem/liquidswap-sdk",
-    "@tsconfig/recommended": "^1.0.1",
+    "@pontem/liquidswap-sdk": "0.5.3",
     "@types/lodash": "4.14.182",
     "@vitejs/plugin-vue": "^1.9.1",
     "@vueuse/core": "^8.9.4",
-    "css-loader": "^6.7.3",
+    "@vueuse/shared": "^9.9.0",
     "decimal.js": "^10.4.1",
     "lodash": "^4.17.21",
-    "node-sass": "^8.0.0",
     "pinia": "2.0.22",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primevue": "3.17.0",
-    "sass-loader": "^13.2.0",
     "tslib": "^2.3.0",
     "vite-plugin-package-version": "^1.0.2",
-    "vite-plugin-require-transform": "^1.0.4",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "vue": "^3.2.40"
   }
 }
