--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@originjs/vite-plugin-require-context": "^1.0.9",
     "rollup-plugin-node-polyfills": "^0.2.1",
+    "@originjs/vite-plugin-require-context": "^1.0.9",
     "vite-plugin-require-transform": "^1.0.4",
-    "sass": "^1.57.1",
-    "vite": "^2.4.4",
     "@tsconfig/recommended": "^1.0.1"
   },
   "dependencies": {
@@ -24,7 +22,6 @@
     "@pontem/coins-registry": "^1.0.4",
     "@pontem/liquidswap-sdk": "0.5.3",
     "@types/lodash": "4.14.182",
-    "@vitejs/plugin-vue": "^1.9.1",
     "@vueuse/core": "^8.9.4",
     "@vueuse/shared": "^9.9.0",
     "decimal.js": "^10.4.1",
@@ -35,6 +32,12 @@
     "primevue": "3.17.0",
     "tslib": "^2.3.0",
     "vite-plugin-package-version": "^1.0.2",
-    "vue": "^3.2.40"
+    "vue": "^3.2.40",
+    "sass-loader": "13.0.0",
+    "sass": "^1.57.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0",
+    "vue-tsc": "^1.0.11"
   }
 }
