feat(widget): APT-986 add gh-pages

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "build:serve": "yarn build; yarn serve"
+    "build:serve": "yarn build; yarn serve",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "@originjs/vite-plugin-require-context": "^1.0.9",
     "vite-plugin-require-transform": "^1.0.4",
-    "@tsconfig/recommended": "^1.0.1"
+    "@tsconfig/recommended": "^1.0.1",
+    "gh-pages": "^4.0.0"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
