--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "liquidswap-widget",
   "version": "0.0.1",
+  "private": true,
+  "homepage": "https://pontem-network.github.io/liquidswap-widget/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
