--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "build": "vite build",
     "serve": "vite preview",
     "build:serve": "yarn build; yarn serve",
-    "deploy": "gh-pages -d docs"
+    "deploy": "yarn build; gh-pages -d docs"
   },
   "devDependencies": {
     "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "@originjs/vite-plugin-require-context": "^1.0.9",
-    "vite-plugin-require-transform": "^1.0.4",
     "@tsconfig/recommended": "^1.0.1",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "vite-plugin-require-transform": "^1.0.4"
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -26,6 +26,7 @@
     "@pontem/coins-registry": "^1.0.4",
     "@pontem/liquidswap-sdk": "0.5.4",
     "@types/lodash": "4.14.182",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vueuse/core": "^8.9.4",
     "@vueuse/shared": "^9.9.0",
     "decimal.js": "^10.4.1",
@@ -34,14 +35,13 @@
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primevue": "3.17.0",
-    "tslib": "^2.3.0",
-    "vite-plugin-package-version": "^1.0.2",
-    "vue": "^3.2.40",
-    "sass-loader": "13.0.0",
     "sass": "^1.57.1",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "sass-loader": "13.0.0",
+    "tslib": "^2.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-package-version": "^1.0.2",
+    "vue": "^3.2.40",
     "vue-tsc": "^1.0.11"
   }
 }
