--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,18 +12,27 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "sourceMap": true,
-    "baseUrl": ".",
-    "types": ["webpack-env"],
+    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
+    "strictNullChecks": true /* Enable strict null checks. */,
+    "strictFunctionTypes": true /* Enable strict checking of function types. */,
+    "noUnusedLocals": true /* Report errors on unused locals. */,
+    "noUnusedParameters": true /* Report errors on unused parameters. */,
+    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+    "importHelpers": true,
+    "outDir": "./dist/tsc",
+    "types": ["node", "webpack-env"],
+    "lib": ["ES6", "DOM", "esnext"],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
     "src/**/*.vue",
-    "src/**/*.ce.vue"
+    "src/**/*.ce.vue",
+    "./.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", "docs"],
+  "files": ["./.d.ts"]
 }
