--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "vite-plugin-dts": "^1.7.1",
     "vite-plugin-package-version": "^1.0.2",
     "vite-plugin-require-transform": "^1.0.4",
-    "vue-tsc": "^1.0.11"
+    "vue-tsc": "^1.0.11",
+    "vite-svg-loader": "4.0.0"
   },
   "dependencies": {
     "@metamask/jazzicon": "2.0.0",
