--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://pontem-network.github.io/liquidswap-widget/",
   "files": ["dist"],
   "main": "./dist/index.js",
+  "type": "module",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "unpkg": "./dist/liquidswap-unpkg/liquidswap-widget.esm.js",
