--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "liquidswap-widget",
-  "version": "0.1.1",
+  "name": "@pontem/liquidswap-widget",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://pontem-network.github.io/liquidswap-widget/",
-  "files": ["dist"],
+  "homepage": "https://github.com/pontem-network/liquidswap-widget#readme",
+  "files": [
+    "src",
+    "dist"
+  ],
+  "keywords": [
+    "pontem",
+    "liquidswap widget"
+  ],
+  "author": "Dmitry Kuksenko <dmitriy.kuksenko@pontem.network>",
+  "repository": "https://github.com/pontem-network/liquidswap-widget",
+  "bugs": {
+    "url": "https://github.com/pontem-network/liquidswap-widget/issues"
+  },
+  "license": "MIT",
+
   "main": "./dist/index.js",
   "type": "module",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "unpkg": "./dist/liquidswap-unpkg/liquidswap-widget.esm.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
