--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,5 +38,7 @@
     "index.ts"
   ],
   "exclude": ["node_modules", "dist", "docs"],
-  "files": ["./index.d.ts"]
+  "files": [
+    "./index.d.ts"
+  ]
 }
