feat(package-json): bump version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@pontem/liquidswap-widget",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "homepage": "https://github.com/pontem-network/liquidswap-widget#readme",
+  "description": "LiquidSwap widget as custom web component",
   "files": [
     "src",
     "dist"
