--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/lodash": "4.14.182",
     "@vueuse/core": "^8.9.4",
     "@vueuse/shared": "^9.9.0",
+    "axios": "0.27.2",
     "decimal.js": "^10.4.1",
     "lodash": "^4.17.21",
     "pinia": "2.0.22",
