--- a/package.json
+++ b/package.json
@@ -37,36 +37,36 @@
     "deploy": "yarn build:gh-pages; gh-pages -d docs"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@types/webpack-env": "^1.18.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "gh-pages": "^4.0.0",
-    "vite-plugin-chunk-split": "^0.4.7",
-    "vite-plugin-dts": "^1.7.1",
+    "@originjs/vite-plugin-commonjs": "1.0.3",
+    "@types/webpack-env": "1.18.0",
+    "@vitejs/plugin-vue": "4.1.0",
+    "gh-pages": "4.0.0",
+    "vite-plugin-chunk-split": "0.4.7",
+    "vite-plugin-dts": "2.2.0",
     "vite-svg-loader": "4.0.0",
-    "vue-tsc": "^1.0.11"
+    "vue-tsc": "1.2.0"
   },
   "dependencies": {
     "@metamask/jazzicon": "2.0.0",
-    "@pontem/aptos-wallet-adapter": "^0.7.2",
-    "@pontem/coins-registry": "^1.0.4",
-    "@pontem/liquidswap-sdk": "^0.6.1",
-    "@tsconfig/recommended": "^1.0.1",
+    "@pontem/aptos-wallet-adapter": "0.7.2",
+    "@pontem/coins-registry": "2.1.1",
+    "@pontem/liquidswap-sdk": "0.6.1",
+    "@tsconfig/recommended": "1.0.2",
     "@types/lodash": "4.14.182",
-    "@vueuse/core": "^8.9.4",
-    "@vueuse/shared": "^9.9.0",
+    "@vueuse/core": "8.9.4",
+    "@vueuse/shared": "9.11.0",
     "axios": "0.27.2",
-    "decimal.js": "^10.4.1",
-    "lodash": "^4.17.21",
+    "decimal.js": "10.4.3",
+    "lodash": "4.17.21",
     "pinia": "2.0.22",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
     "primevue": "3.17.0",
-    "sass": "^1.57.1",
+    "sass": "1.61.0",
     "sass-loader": "13.0.0",
-    "tslib": "^2.3.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
+    "tslib": "2.5.0",
+    "typescript": "5.0.4",
+    "vite": "4.2.1",
     "vue": "3.2.40"
   }
 }
