feat(widget): LS-1068 update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "sourceMap": true,
-    "baseUrl": ".",
     "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
     "strictNullChecks": true /* Enable strict null checks. */,
     "strictFunctionTypes": true /* Enable strict checking of function types. */,
@@ -19,6 +18,7 @@
     "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
     "importHelpers": true,
+    "declaration": false,
     "outDir": "./dist/tsc",
     "types": ["node", "vite/client"],
     "lib": ["ES7", "DOM", "esnext"],
