--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tslib": "2.5.0",
     "typescript": "4.9.5",
     "vite": "4.2.1",
-    "vue": "3.2.40"
+    "vue": "3.2.40",
+    "autonumeric": "4.10.0"
   }
 }
