--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pontem/liquidswap-widget",
-  "version": "0.4.6",
+  "version": "0.5.0",
   "homepage": "https://github.com/pontem-network/liquidswap-widget#readme",
   "description": "Liquidswap widget as custom web component",
   "files": [
@@ -50,7 +50,7 @@
     "@metamask/jazzicon": "2.0.0",
     "@pontem/aptos-wallet-adapter": "0.7.2",
     "@pontem/coins-registry": "2.1.73",
-    "@pontem/liquidswap-sdk": "0.6.1",
+    "@pontem/liquidswap-sdk": "/Users/dmitrijkuksenko/pontem/liquidswap-sdk",
     "@tsconfig/recommended": "1.0.2",
     "@types/lodash": "4.14.182",
     "@vueuse/core": "9.13.0",
