--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@metamask/jazzicon": "2.0.0",
     "@pontem/aptos-wallet-adapter": "0.7.2",
     "@pontem/coins-registry": "2.1.73",
-    "@pontem/liquidswap-sdk": "/Users/dmitrijkuksenko/pontem/liquidswap-sdk",
+    "@pontem/liquidswap-sdk": "0.7.1",
     "@tsconfig/recommended": "1.0.2",
     "@types/lodash": "4.14.182",
     "@vueuse/core": "9.13.0",
