--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,4 +48,4 @@ jobs:
       if: steps.version_check.outputs.version_changed == 'true'
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_CI_TOKEN }}
-      run: npm publish --dry-run
+      run: npm publish
