[feat-ls-2155-indexer]
update options
add API_KEY

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,4 +48,5 @@ jobs:
       if: steps.version_check.outputs.version_changed == 'true'
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_CI_TOKEN }}
+        API_KEY: ${{ secrets.API_KEY }}
       run: npm publish
